--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -52,6 +52,10 @@ h6 {
 
 h1 {
 	font-size: 24px;
+
+	small {
+		display: block;
+	}
 }
 
 h2 {
@@ -103,16 +107,16 @@ h4 {
 		margin: 22px auto 0 auto;
 		text-align: center;
 	}
-
-	h2 {
-		font-size: 52px;
-		line-height: 42px;
-	}
 	
 	h1 {
 		font-size: 97px;
 		line-height: 70px;
 		margin: 0 0 25px 0;
+
+		small {
+			font-size: 52px;
+			line-height: 42px;
+		}
 	}
 	
 	p {
